bug: fixed spacing issue, added footer to cart page

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -50,10 +50,6 @@ nav {
   min-width: max-content;
 }
 
-.btn {
-  margin-left: 10px;
-}
-
 .right-nav a {
   padding: 0.5rem;
 }
